<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/nott"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="Ảnh đại diện:"
        android:textColor="#F000"
        android:textSize="20sp" />
    <ImageView
        android:layout_marginTop="5dp"
        android:background="#9A000000"
        android:layout_below="@+id/nott"
        android:id="@+id/iv_user"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/oer"
        />

    <TextView
        android:id="@+id/nameu"
        android:hint="Loadding"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:textColor="#f000"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_alignStart="@+id/nameu"
        android:layout_alignLeft="@+id/nameu"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ten1"
        android:textColor="#F000"
        android:textSize="20sp" />


    <TextView
        android:hint="Loadding"
        android:id="@+id/emailu"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/nameu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:textColor="#f000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameu"
        android:layout_alignStart="@+id/nameu"
        android:layout_alignLeft="@+id/nameu"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/email1"
        android:textColor="#F000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/passu"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/emailu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="Loadding"
        android:textColor="#f000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailu"
        android:layout_alignStart="@+id/nameu"
        android:layout_alignLeft="@+id/nameu"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/matkhau1"
        android:textColor="#F000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btedis"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rectangle_pink"
        android:fontFamily="@font/baloo"
        android:text="@string/capnhap1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnuotr"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btedis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#EA3A3A"
        android:fontFamily="@font/baloo"
        android:text="@string/dangxuat1"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</RelativeLayout>