<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nottt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="Ảnh đại diện:"
        android:textColor="#F000"
        android:textSize="20sp" />
    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_below="@+id/nottt"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit_anh"
        android:layout_width="170dp"
        android:layout_height="170dp"
        >
        <ImageView
            android:background="#9A000000"
            android:layout_width="260dp"
            android:layout_height="250dp"
            android:src="@drawable/oer"
            android:scaleType="centerCrop"
            android:id="@+id/hinhanhchithuat"/>

        <Button
            android:id="@+id/suaanhchithuat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#9A000000"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/capnhap1"
            android:textColor="#F4F4F4"


            android:textSize="25sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editname"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/edit_anh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="text"
        android:textColor="#f000"

        android:textSize="20sp" />

    <Button
        android:id="@+id/capnhapten"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/editname"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rectangle_pink"
        android:fontFamily="@font/baloo"
        android:text="@string/capnhap1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_anh"
        android:layout_alignStart="@+id/nameu"
        android:layout_alignLeft="@+id/nameu"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ten1"
        android:textColor="#F000"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editemail"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/capnhapten"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textEmailAddress"
        android:textColor="#f000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/capnhapemail"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/editemail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rectangle_pink"
        android:fontFamily="@font/baloo"
        android:text="@string/capnhap1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capnhapten"
        android:layout_alignStart="@+id/editname"
        android:layout_alignLeft="@+id/editname"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/email1"
        android:textColor="#F000"
        android:textSize="20sp" />


    <EditText

        android:id="@+id/editpasss"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/capnhapemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#EDE6E6"
        android:ems="10"
        android:fontFamily="monospace"
        android:textColor="#f000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/capnhapmk"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_below="@+id/editpasss"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rectangle_pink"
        android:fontFamily="@font/baloo"
        android:text="@string/capnhap1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capnhapemail"
        android:layout_alignStart="@+id/nameu"
        android:layout_alignLeft="@+id/nameu"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo"
        android:text="@string/matkhau1"
        android:textColor="#F000"
        android:textSize="20sp" />
</RelativeLayout>